--- a/SonaWebsite/styles.css
+++ b/SonaWebsite/styles.css
@@ -1,6 +1,3 @@
-/* https://mycolor.space/?hex=%234F3F52&sub=1 */
-/* To add alt text to the images */
-
 *{
     padding:0px;
     margin:0px;
@@ -8,7 +5,10 @@
 	text-decoration: none;
 }
 
+
 /* General Settings */
+
+
 html{
     scroll-behavior:smooth;
 }
@@ -180,7 +180,11 @@ section h2{
     margin: 0 0 15px 0;
 }
 
-#lore-aside{
+.lore-aside{
+    display: none;
+}
+
+.notes{
     display: none;
 }
 
@@ -210,6 +214,10 @@ section h2{
 .carousel-inner img {
     width: 100%;
     height: 100%;
+}
+
+#custCarousel{
+    text-align:center;
 }
 
 #custCarousel .carousel-indicators {
@@ -301,7 +309,7 @@ form input[type=submit]:hover{
     margin-bottom: 40px;
 }
 
-#coaching-aside{
+.coaching-aside{
     margin:55px auto;
     vertical-align: top;
     background-color: rgba(255,255,255,0.2);
@@ -311,25 +319,31 @@ form input[type=submit]:hover{
     text-align: left;
 }
 
-#coaching-aside p a{
+.coaching-aside p a{
     font-size: 1.1em;
 }
 
-#coaching-aside p{
+.coaching-aside p{
     margin: 15px;
     margin-left: 30px;
 }
 
-#coaching-aside a{
+.coaching-aside a{
     color: #fff;
 }
 
-#coaching-aside a:hover{
+.coaching-aside a:hover{
     text-decoration: underline;
 }
 
+.pricing{
+    display: none;
+}
+
+
 
 /* Footer Settings */
+
 
 footer{
     background-color: rgba(255,255,255, 0.4);
@@ -402,6 +416,10 @@ footer img{
     width: 18.55% !important;
 }
 
+
+/* Section settings */
+
+
 .content {
     padding-top: 16px;
 }
@@ -430,6 +448,11 @@ main section{
 }
 
 
+#skins-nav{
+    position: inherit;
+}
+
+
 /* Section Settings */
 
 
@@ -440,9 +463,10 @@ main section{
 
 #index-section article{
     display: inline-block;
-    width: 45%;
     margin:0 10px;
     vertical-align: middle;
+    width: 45%;
+
 }
 
 #index-section article:first-of-type{
@@ -457,30 +481,13 @@ main section{
     padding-bottom: 10px;
 }
 
-#mobile-gallery{
-    display: none;
-}
-
-#skins-nav{
-    position: inherit;
-}
-
-.gallery-container{
-    display:block;
-}
-
-.carousel-indicators{
-    visibility:hidden;
-}
-
 #lore-main{
-    padding:0 auto;
+    padding-top:60px;
     text-align: center;
 }
 
-#lore-section, #lore-aside{
+#lore-section, .lore-aside{
     display: inline-block;
-    
 }
 
 #lore-section{
@@ -491,7 +498,7 @@ main section{
     margin-bottom: 60px;
 }
 
-#lore-aside{
+.lore-aside{
     margin:15px;
     vertical-align: top;
     width: 20%;
@@ -500,7 +507,7 @@ main section{
     padding:20px 10px;
 }
 
-#lore-aside p{
+.lore-aside p{
     text-align: left;
     margin: 15px;
     
@@ -508,11 +515,10 @@ main section{
 }
 
 #coaching-main{
-    padding:0 auto;
-
+    padding:0;
 }
 
-#coaching-section, #coaching-aside{
+#coaching-section, .coaching-aside{
     display: inline-block;
 }
 
@@ -520,7 +526,7 @@ main section{
     width: 60%;
 }
 
-#coaching-aside{
+.coaching-aside{
     width: 30%;
 }
 
@@ -528,22 +534,160 @@ main section{
     margin-bottom: 40px;
 }
 
-#coaching-aside p a{
-text-align: center;
+.coaching-aside p a{
+    text-align: center;
     font-size: 1.1em;
 }
 
-#coaching-aside p{
+.coaching-aside p{
     margin: 15px;
     margin-left: 30px;
 }
 
-#coaching-aside a{
+.coaching-aside a{
     color: #fff;
 }
 
-#coaching-aside a:hover{
+.coaching-aside a:hover{
     text-decoration: underline;
 }
 
+.notes{
+    display: inline;
+    position:fixed;
+    width: 150px;
+    height: 200px;
+    z-index: -1;
+    opacity: 0.1;
+}
+
+#right-note{
+    top:430px;
+    right:80px;
+}
+
+#left-note{
+    top:150px;
+    left: 80px;
+}
+
+
+/* Gallery settings */
+
+
+#mobile-gallery{
+    display: none;
+}
+
+
+.gallery-container{
+    display:block;
+}
+
+.carousel-indicators{
+    visibility:hidden;
+}
+}
+
+
+@media screen and (min-width:1200px) {
+
+
+/* Section settings */
+
+
+#index-section article{
+    width: 40%;
+    margin: 0 20px;
+}
+
+#lore-section{
+    width: 50%;
+}
+
+.gallery-container{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.carousel-indicators{
+    visibility:visible;
+}
+
+.notes{
+    width: 200px;
+    height: 250px;
+}
+
+#right-note{
+    top:380px;
+    right:60px;
+}
+
+#left-note{
+    left: 60px;
+}
+
+.coaching-aside p{
+    font-size: 1.2em;
+}
+
+}
+
+@media screen and (min-width:1400px) {
+
+
+/* Nav Settings */
+
+
+.main-nav ul li{
+        display:inline-block;
+        width: 10%;
+        margin: 0 15px;
+        background-color: rgb(79,137,164);    
+}
+    
+.skins-nav-li-fix{
+    width: 12% !important;
+}
+   
+
+/* Section Settings */
+
+#lore-section{
+ width: 55%;   
+}
+
+#lore-section figure {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.lore-aside{
+    width: 15%;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#right-note{
+    right:70px;
+}
+
+#left-note{
+    left: 70px;
+}
+
+#coaching-main{
+    text-align: center;
+}
+
+.coaching-aside{
+    width: 18%;
+}
+
+#coaching-section{
+    width: 40%;
+    text-align: left;
+}
 }
