--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ header hgroup{
     margin-bottom: 10px;
     background-color: rgba(79,137,164,0.5);
     box-shadow: 1px 1px 5px #000;
+    transition: 0.2s ease-out
 }
 
 .main-nav ul li a{
